--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ header h1 {
     color: white;
     background-color: #4C2F7F;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 400;
     font-size: 100%;
     padding: 11px 38px;
     margin-right: -155%;
@@ -26,12 +27,15 @@ body {
 main {
     background-color: #FEFDF7;
     max-width: 750px;
-    max-height: 3000px;
+    max-height: 4000px;
     text-align: center;
 }
 
 main h1 {
-    font-size: 70px;
+    margin-left: 20px;
+
+    font-size: 100px;
+    font-family: 'Mouse Memoirs', sans-serif;
     padding-top: 20px;
 }
 
@@ -44,7 +48,7 @@ main h1 {
     font-size: 32px;
     font-stretch: normal;
     font-weight: 550;
-    margin: 20px 0px 75px 120px;
+    margin: 25px 0px 75px 130px;
     border: 2px solid #3B4268;
     text-align: center;
     padding: 24px 50px;
@@ -54,11 +58,15 @@ main h1 {
 }
 
 #Logo-and-Button {
-    margin: 73px 30px 0px 20px;
+    margin: 18px 30px 10px 20px;
     display: flex;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+}
+
+.two-penguins {
+    margin-top: 10px;
 }
 
 .first-par {
@@ -113,11 +121,18 @@ main h1 {
 }
 
 .eigth-par {
+    margin: 70px 0px 0px 40px;
     text-align: left;
+    font-size: 30px;
+    line-height: 50px;
 }
 
 .ninth-par {
-    text-align: right;
+    margin: 70px 0px 0px 65px;
+    text-align: left;
+    font-size: 30px;
+    line-height: 50px;
+    
 }
 
 .button-two {
@@ -130,6 +145,16 @@ main h1 {
     padding: 28px;
     border-radius: 10px;
     justify-content: center;
+}
+
+.sentence {
+    font-family: 'Work Sans', sans-serif;
+}
+
+#status-bar {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 #second-section {
@@ -150,13 +175,32 @@ main h1 {
     flex-wrap: nowrap;
 }
 
+#fifth-section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+#sixth-section {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+#sign-up {
+    margin-top: 60px;
+    margin-bottom: 69px;
+}
+
 #information-list {
+    margin: 70px 0px 0px 0px;
+    padding: 32px 0px 10px 0px;
     list-style-type: none;
-    font-size: 30px;
-    font-weight: 800px;
-    font-style: bold;
+    font-family: 'Work Sans', sans-serif;
+    font-size: 35px;
+    font-weight: 500;
     background-color: #FEFCDD;
-    line-height: 80px;
+    line-height: 90px;
 }
 
 #penguin1 {
@@ -165,19 +209,32 @@ main h1 {
 }
 
 #penguin2 {
-    margin: auto 0px auto 30px;
+    margin: auto 0px auto 25px;
     width: 280px;
 }
 
 #penguin3 {
-    width: 40px;
+    margin: 5px 10px 60px 0px;
+    width: 280px;
 }
 
 #penguin4 {
-    width: 40px;
+    margin: 15px 0px 0px 40px;
+    width: 285px;
 }
 
 span {
     font-weight: bold;
+}
+
+#time {
+    margin: 28px 0px 0px 50px;
+    font-size: 33px;
+    font-weight: 450;
+    color: #42403F;
+}
+
+#cell-status {
+    margin: 25px 0px 0px 440px;
 }
 
